modules/gdscript/tests/scripts/analyzer/errors/shadowing.gd
class A:
	enum { V }

class B extends A:
	enum { V }

class Vector2: pass
enum Vector2i { A, B }
const Vector3 = 0
var Vector3i
var Node = ""
var script: int

class C extends Resource:
	const changed: int = 0
	var resource_name: String
	var NOTIFICATION_POSTINITIALIZE = 1


func test():
	pass
